--- a/notebooks/day-one/intro-to-python.ipynb
+++ b/notebooks/day-one/intro-to-python.ipynb
@@ -2,9 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
     "# A Very Brief Intro To Python, Jupyter and Pandas\n",
     "\n",
@@ -21,11 +19,8 @@
   {
    "cell_type": "code",
    "execution_count": 0,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-   ],
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# the hash is used to denote a comment in python\n",
     "\n",
@@ -49,11 +44,8 @@
   {
    "cell_type": "code",
    "execution_count": 0,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-   ],
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# While in control mode 'b' adds a cell below the highlighted cell\n",
     "\n",
@@ -75,9 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -109,9 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -140,9 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -179,10 +165,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -229,17 +213,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (system-wide)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "metadata": {
-    "cocalc": {
-     "description": "Python 3 programming language",
-     "priority": 100,
-     "url": "https://www.python.org/"
-    }
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
    },
-   "name": "python3",
-   "resource_dir": "/ext/jupyter/kernels/python3"
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
